alignment corrected

--- a/styles/Menu.module.css
+++ b/styles/Menu.module.css
@@ -16,14 +16,16 @@
 }
 
 .navbarelement{
-    padding-left:1px;
+    padding-left:1.5rem;
     padding-bottom: 30px;
-    padding-top: 10px;
-    
+    padding-top: 20px;
+    color: white;
     text-align: left;
   
 }
-
+.text{
+    color: white;
+}
 .navbarelement1{
     padding-left:4px;
     padding-bottom: 20px;
