--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -182,27 +182,27 @@
   width: 100%;
 }
 .activetextproject{
-  color: #7a5322;
+  color: #f2a841;
   font-size: 22px;
 }
 
 .activetextwhat{
-  color: #7a5322;
+  color: #f2a841;
   font-size: 22px;
 }
 
 .activetextget{
-  color: #7a5322;
+  color: #f2a841;
   font-size: 22px;
 }
 
 .activetextteam{
   font-size: 22px;
-  color: #7a5322;
+  color: #f2a841;
 }
 
 .activetextget{
-  color: #7a5322;
+  color: #f2a841;
   font-size: 22px;
 }
 
