--- a/styles/Teams.module.css
+++ b/styles/Teams.module.css
@@ -2,7 +2,7 @@
     padding-left: 6rem;
     padding-right: 6rem;
     padding-bottom: 1rem;
-    padding-top: 1rem;
+    padding-top: 6rem;
     width: 100%;
     background-color: #b370b0;
 }
